logs/htpicker.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/distribute-0.7.3-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/htpicker'...
Compiling './lib/python3.5/site-packages/htpicker/__init__.py'...
***   File "./lib/python3.5/site-packages/htpicker/__init__.py", line 43
    except RuntimeError, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/htpicker/data'...
Listing './lib/python3.5/site-packages/htpicker/data/css'...
Listing './lib/python3.5/site-packages/htpicker/data/css/ui-darkness'...
Listing './lib/python3.5/site-packages/htpicker/data/css/ui-darkness/images'...
Listing './lib/python3.5/site-packages/htpicker/data/images'...
Listing './lib/python3.5/site-packages/htpicker/data/images/nuvola'...
Listing './lib/python3.5/site-packages/htpicker/data/js'...
Listing './lib/python3.5/site-packages/htpicker-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
